--- a/frontend/src/app/components/home.component.html
+++ b/frontend/src/app/components/home.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <h1>Photo List</h1>
+      <photo-list></photo-list>
     </div>
     <div class="col-6">
-      <h1>Side Panel</h1>
+      <side-panel></side-panel>
     </div>
   </div>
 </div>
