--- a/frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -21,7 +21,7 @@
         <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/register" routerLinkActive="active">Login</a>
+        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
       </li>
     </ul>
   </div>
