--- a/frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/my-album" routerLinkActive="active">Link</a>
+        <a class="nav-link" routerLink="/my-album" routerLinkActive="active">My Album</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
